# praetorcast-core

./: .gitignore  Cargo.toml  README.md  ws_chat_youtube.cjs
data/: banner.example.json  banner.json  scheduler.json
public/js/: chat-common.js  music-api.js
public/soundboard/: song.txt
src/: banner.rs  banner_config.rs  chat_horizontal.rs  chat_vertical.rs  chat_youtube.rs  clock.rs  discord_presence.rs  emote_corner.rs  followers_info.rs  main.rs  music_config.rs  music_current.rs  scheduler.rs  twitch.rs
src/controllers/: banner_controller.rs  display.rs  mod.rs  music_controller.rs  obs_controller.rs  scheduler_controller.rs  twitch_controller.rs
src/models/: banner.rs  config.rs  mod.rs  scheduler.rs
templates/: banner.html  banner_config.html  chat_horizontal.html  chat_vertical.html  chat_youtube.html  clock.html  discord_presence.html  emote_corner.html  followers_info.html  index.html  music_config.html  music_current.html  scheduler.html
