[package]
name = "praetorcast-core"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.6"
askama = "0.12"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
bytes = "1"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
actix-ws = "0.2"
obws = "0.14"
